--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -557,3 +557,11 @@ html{
 .on{
     display: block;
 }
+
+.form-group.invalid .form-control{
+    border-color: var(--arrow-color);
+}
+
+.form-group.invalid .form-message{
+    color: var(--arrow-color);
+}
